# AI-PR-Review-Assistant

./: .gitignore  CHANGELOG.md  CLI_GUI_DESIGN.txt  CONFIG_DESIGN_V2.txt  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DISTRIBUTION_OPTIMIZATION.txt  FINAL_DEVELOPMENT_PLAN.md  FIX_API_KEY_INPUT.txt  FIX_API_KEY_SAVE.txt  FIX_CONFIG_ISSUES.txt  FIX_CONFIG_PERSISTENCE.txt  FIX_GITHUB_TOKEN.txt  GUI_CONFIG_DESIGN.txt  INSTALL_OPTIMIZATION.txt  NEXT_STEPS_TASKS.txt  OPTIMIZATION_PLAN.md  PROGRESS.md  PROGRESS_UPDATE.md  PR_FETCHER_MODULE_DESIGN.md  README.md  SESSION_HISTORY.md  SESSION_SAVE.md  STAGE2_TASKS.txt  STAGE3_TASKS.txt  TRILATERAL_NEGOTIATION.md  UPDATE_SUMMARY.md  ai_client_design.txt  api_key_security_fix.txt  cli_entry_design.txt  context_builder_design.txt  cost_controller_design.txt  discussion_prompt_pr_fetcher.txt  filter_pipeline_review.txt  fix_default_filter_rules.txt  fix_duplicate_api_call.txt  fix_github_comment_renderer.txt  install.bat  install.ps1  install.sh  (+12 more)
.ai_pr_review/: config.json  config.local.json.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feedback.yml
.github/workflows/: ci.yml  release.yml
assets/: docs-data.js
assets/icons/: README.md
css/: style.css
docs/: API.md  ASSET_GUIDE.md  DEMO_WALKTHROUGH.md  INNOVATION.md  MILESTONE_SUMMARY.md  PROJECT_DESIGN.md  PR_WORKFLOW.md  RELEASE.md  WEBSITE.md
scripts/: build_website_docs.py  release.sh
src/ai_pr_review/: __init__.py  __main__.py  chat_commands.py  chat_runtime.py  chat_session.py  cli.py  config.py  config_commands.py  config_diagnostics.py  (+7 more)
tests/: conftest.py  test_ai_client.py  test_cli.py  test_context_builder.py  test_cost_controller.py  test_filter_pipeline.py  test_model_providers.py  test_post_processor.py  test_pr_fetcher.py  test_prompt_assembler.py  test_report_renderer.py  test_result_store.py  test_review_orchestrator.py
website/: index.html
(+24 files in other folders)
